# strava-flow

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  setup.py
strava_flow/api/darksky/: api.py  http_client.py
strava_flow/api/strava/: api.py  credentials.py  http_client.py  oauth2.py
strava_flow/api/strava/apis/: abc.py  activities_api.py  athletes_api.py
strava_flow/configuration/: config.py  config.yaml
strava_flow/darksky_api/: api.py
strava_flow/schemas/: validator.py
strava_flow/schemas/definitions/: ActivityRetrievalResultV1.json  ActivityRetrievalTaskV1.json  ActivitySummaryV1.json  ActivityWeatherProcessorResultV1.json  ActivityWeatherProcessorTaskV1.json
strava_flow/services/: activity_weather_processor.py
strava_flow/strava_api/: api.py  credentials.py  http_client.py  oauth2.py
strava_flow/strava_api/apis/: abc.py  activities_api.py  athletes_api.py
strava_flow/utils/: time.py
tests/: test_mypy.py
