[build-system]
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 120
py36 = true
skip-string-normalization = true
skip-numeric-underscore-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''